--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		
 		<script src="https://tether.corehoundsystem.com/Channelscript.js"></script>
 <script src="https://tether.corehoundsystem.com/Library.js"></script>
-<link rel="stylesheet" href="https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/Tether.css">
+<link rel="stylesheet" href="https://tether.corehoundsystem.com/Tether.css">
 		
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141646766-1"></script>
