--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 		
 		
 		
-		<script src="https://tether.corehoundsystem.com/Music.js"></script>
-		<script src="https://tether.corehoundsystem.com/User.js"></script>
+		<script src="https://tether.corehoundsystem.com/Users.js"></script>
 		<script src="https://tether.corehoundsystem.com/Library.js"></script>
 		<script src="https://tether.corehoundsystem.com/Channelscript.js"></script>
 		<link rel="stylesheet" href="https://tether.corehoundsystem.com/Tether.css">
