--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					cL('Image URL: ' + profile.getImageUrl());
 					cL('Email: ' + profile.getEmail());
 					//loadUser(profile);
-					//loadUser(profile.getId(),profile.getGivenName(),profile.getFamilyName(),profile.getEmail());
+					loadUser(profile.getId(),profile.getGivenName(),profile.getFamilyName(),profile.getEmail());
 				}
 				
 				function signOut() {
