--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="https://tether.corehoundsystem.com/Users.js"></script>
 		<script src="https://tether.corehoundsystem.com/Library.js"></script>
 		<script src="https://tether.corehoundsystem.com/Channelscript.js"></script>
-		<link rel="stylesheet" href="file:///C:/Users/howl/Downloads/Tether.css">
+		<link rel="stylesheet" href="https://tether.corehoundsystem.com/Tether.css">
 		
 		<script src="https://apis.google.com/js/platform.js" defer></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141646766-1"></script>
