--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
 		<meta name="web_author" content="Core Hound System, LLC">
 		<meta http-equiv="window-target" content="_top">
 		<meta name="theme-color" content="#008080">
-		<link rel="icon" sizes="192x192" href="XXX">
+		<link rel="icon" sizes="192x192" href="https://tether.corehoundsystem.com/icons/android-chrome-192x192.png">
 		<link href="https://fonts.googleapis.com/css?family=Economica|Unica+One&display=swap" rel="stylesheet">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://tether.corehoundsystem.com/icons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://tether.corehoundsystem.com/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://tether.corehoundsystem.com/icons/favicon-16x16.png">
 	</head>
 	<body>
 		<script>
