--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 		<meta name="twitter:site" content="@handle">
 		<meta name="twitter:creator" content="@handle">
 		<meta name="twitter:title" content="Tether, Take SL Music With You!">
-		<meta name="twitter:image" content="https://tether.corehoundsystem.com/icons/android-chrome-192x192.png">
-		<meta name="og:title" content="Tether, Take SL Music With You!">
-		<meta name="og:description" content="Listen to your favorite SL musicians anywhere, anytime.">
-		<meta name="og:image" content="https://tether.corehoundsystem.com/icons/android-chrome-192x192.png">
-		<meta name="og:locale" content="en_US">
-		<meta name="og:site_name" content="Tether">
-		<meta name="og:url" content="https://tether.corehoundsystem.com">
+		<meta name="twitter:image" content="https://tether.corehoundsystem.com/icons/Banners%20(3).jpg">
+		<meta property="og:title" content="Tether, Take SL Music With You!">
+		<meta property="og:description" content="Listen to your favorite SL musicians anywhere, anytime.">
+		<meta property="og:image" content="https://tether.corehoundsystem.com/icons/Banners%20(3).jpg">
+		<meta property="og:locale" content="en_US">
+		<meta property="og:site_name" content="Tether">
+		<meta property="og:url" content="https://tether.corehoundsystem.com">
 		<meta name="description" content="Listen to your favorite SL musicians anywhere, anytime.">
 		<meta name="keywords" content="second life,music,live,cover,original">
 		<meta name="language" content="English">
