--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		</script>
 		<meta name="google-signin-client_id" content="833721381252-smfnva31dl66h8n6ffikc99f50ff4dqo.apps.googleusercontent.com">
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:site" content="@handle">
-		<meta name="twitter:creator" content="@handle">
+		<meta name="twitter:site" content="@SLtether">
+		<meta name="twitter:creator" content="@SLtether">
 		<meta name="twitter:title" content="Tether, Take SL Music With You!">
 		<meta name="twitter:image" content="https://tether.corehoundsystem.com/icons/Banners%20(3).jpg">
 		<meta property="og:title" content="Tether, Take SL Music With You!">
