--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 		<script>
 			rPMax=12;
 			testMode=1;
-			songURL="https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/songs/";
+			//songURL="https://raw.githubusercontent.com/CoreHoundSystem/Tether/master/songs/";
+			songURL="https://tether-sl.s3.us-east-2.amazonaws.com/";
 			
 			function cL(x) {
 				if(testMode>=1) {
