--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 			</div>
 			<div id="tetherDataField"></div>
 			<div id="activeChannel"></div>
+			<div id="trashCan"></div>
 			<div id="loginModal">
 				<div class="g-signin2" data-onsuccess="onSignIn"></div>
 			</div>
