--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			<div id="tetherFooter">
 				<div class="signOut"><button class="signOut">Sign Out</button></div>
 				<div id="socialBar"></div>
-				<div id="legalBar"><span class="modal">Privacy Policy</span><span class="modal">Terms of Use</span></div>
+				<div id="legalBar"><a href="https://docs.google.com/document/d/1ngBkZzIi69qJn6GexRnZGXpJKISSFZQCLzNbIC9BPlw/edit?usp=sharing" target="_blank"><span class="modal">Privacy Policy</span><span class="modal">Terms of Use</span></a></div>
 				<div id="copyright">©2019 Core Hound System, LLC - All Rights Reserved</div>
 			</div>
 		</div>
